# atomr-worlds

./: .gitignore  Cargo.toml  README.md
crates/atomr-worlds-accel/: Cargo.toml
crates/atomr-worlds-accel/benches/: cpu_vs_gpu.rs
crates/atomr-worlds-accel/src/: cuda.rs  cuda_kernel.cu  lib.rs  strategy_kernels.rs
crates/atomr-worlds-accel/tests/: cuda_determinism.rs
crates/atomr-worlds-client/: Cargo.toml
crates/atomr-worlds-client/assets/shaders/: sky_dome.wgsl  voxel_material.wgsl  voxel_raymarch.wgsl
crates/atomr-worlds-client/src/: brick_gen.rs  cli.rs  harness.rs  host_backend.rs  hud.rs  main.rs  view_mode.rs  world_runtime.rs  world_stream.rs
crates/atomr-worlds-client/src/modes/: blit.rs  edit.rs  edit_workers.rs  fp.rs  mod.rs  overview.rs  raster_async.rs  rts.rs  slice.rs  tp.rs
crates/atomr-worlds-client/src/perf/: mod.rs  overlay.rs
crates/atomr-worlds-client/src/physics/: character.rs  collider_gen.rs  config.rs  debris.rs  debris_stream.rs  defaults.rs  fracture.rs  mod.rs  plugin.rs  registry.rs  strategy.rs
crates/atomr-worlds-client/src/render/: config.rs  dag_cache.rs  defaults.rs  horizon_shell.rs  materials.rs  mod.rs  offscreen.rs  plugin.rs  raymarch.rs  registry.rs  sky_dome.rs  skybox.rs  strategy.rs  sun.rs
crates/atomr-worlds-client/tests/: headless_smoke.rs  horizon_shell_runtime.rs  skybox_runtime.rs
crates/atomr-worlds-core/: Cargo.toml
crates/atomr-worlds-core/src/: addr.rs  atmosphere.rs  coord.rs  dim.rs  error.rs  hierarchy.rs  hlc.rs  interaction.rs  lib.rs  lod.rs  lww.rs  material_physics.rs  seed.rs  shape.rs  vehicle.rs
crates/atomr-worlds-generate/: Cargo.toml
crates/atomr-worlds-generate/src/: brick.rs  error.rs  lib.rs  material_selection.rs  registry.rs  terrain.rs  tiers.rs
crates/atomr-worlds-generate/src/authored/: heightmap.rs  literal.rs  mod.rs  voxfile.rs
crates/atomr-worlds-generate/src/macro_state/: biome.rs  climate.rs  mod.rs  plates.rs  relief.rs  surface_grid.rs
crates/atomr-worlds-generate/src/pipeline/: anchor.rs  biome_blend.rs  biome_matrix.rs  config.rs  density.rs  feature_seeder.rs  layered.rs  light.rs  mod.rs  ore.rs  placement.rs  presets.rs  registry.rs  strata.rs  strategies.rs  vanilla.rs  workspace.rs
crates/atomr-worlds-generate/src/strategies/: asteroid_belt.rs  empty_planetoid.rs  gas_giant.rs  ice_shell.rs  mod.rs  terrain.rs
crates/atomr-worlds-generate/tests/: hydrology.rs  macro_determinism.rs  region_loaders.rs  vanilla_byte_equality.rs
crates/atomr-worlds-host/: Cargo.toml
crates/atomr-worlds-host/src/: clock.rs  cluster.rs  error.rs  extractor.rs  host.rs  lib.rs  local.rs  policy.rs  shape.rs  world_query_impl.rs
crates/atomr-worlds-host/tests/: coarse_lod_restamp.rs  debris_sim_e2e.rs  fracture_e2e.rs  ice_shell_e2e.rs  local_e2e.rs  lww_e2e.rs  persistence_e2e.rs  policy_e2e.rs  region_write_e2e.rs  sphere_horizon_e2e.rs  stipulation_e2e.rs
crates/atomr-worlds-noise/: Cargo.toml
crates/atomr-worlds-noise/src/: domain_warp.rs  fbm.rs  gradient.rs  hash.rs  island.rs  lib.rs  simplex.rs  value.rs  worley.rs
crates/atomr-worlds-persist/: Cargo.toml
crates/atomr-worlds-persist/src/: derived.rs  lib.rs
crates/atomr-worlds-physics/: Cargo.toml
crates/atomr-worlds-physics/src/: box_merge.rs  debris.rs  debris_sim.rs  flood_fill.rs  fracture_analysis.rs  inertia.rs  lib.rs  math.rs
crates/atomr-worlds-proto/: Cargo.toml
crates/atomr-worlds-proto/src/: aabb.rs  envelope.rs  error.rs  fracture.rs  lib.rs  messages.rs  streaming.rs  wire.rs
crates/atomr-worlds-py/: Cargo.toml  README.md  pyproject.toml
crates/atomr-worlds-py/python/atomrworlds/: __init__.py
crates/atomr-worlds-py/python/tests/: test_smoke.py
crates/atomr-worlds-py/src/: lib.rs
crates/atomr-worlds-remote/: Cargo.toml
crates/atomr-worlds-remote/src/: cluster_forwarder.rs  gateway.rs  lib.rs  remote_host.rs  wire.rs
crates/atomr-worlds-remote/tests/: cluster.rs  loopback.rs
crates/atomr-worlds-server/: Cargo.toml
crates/atomr-worlds-server/src/: lib.rs  main.rs
crates/atomr-worlds-server/tests/: cluster.rs  standalone.rs
crates/atomr-worlds-testkit/: Cargo.toml
crates/atomr-worlds-testkit/src/: lib.rs  strategies.rs
crates/atomr-worlds-testkit/tests/: cross_crate.rs  extractor_stable.rs  hash_quality.rs
crates/atomr-worlds-view/: Cargo.toml
crates/atomr-worlds-view/src/: camera.rs  decals.rs  frustum.rs  iso.rs  lib.rs  mesh.rs  observer.rs  projection_sphere.rs  raster2d.rs  render.rs  scene.rs  skybox.rs  view_cache.rs  world_query.rs
crates/atomr-worlds-view/src/derived/: horizon_shell.rs  mod.rs  slice_index.rs  surface_raster.rs  world_summary.rs
crates/atomr-worlds-view/src/mesh/: dual_contouring.rs  greedy.rs  marching_cubes.rs  mod.rs  naive.rs
crates/atomr-worlds-view/src/modes/: fp.rs  mod.rs  overview.rs  rts.rs  slice.rs  tp.rs  (+1 more)
crates/atomr-worlds-view/tests/: chase_smoothing.rs  composite.rs  deterministic_screenshot.rs  overview_golden_equirectangular.rs  overview_golden_orthographic.rs  overview_golden_orthographic_sphere.rs  overview_pyramid_level_pick.rs  overview_sphere_projection_sanity.rs  raymarch_golden.rs  rts_decal_pass.rs  rts_golden.rs  rts_surface_invariance.rs  seam.rs  skybox.rs  slice_golden.rs  slice_invalidation.rs  slice_z_band_rule.rs  walk_determinism.rs
crates/atomr-worlds-voxel/: Cargo.toml
crates/atomr-worlds-voxel/src/: brick.rs  codec.rs  dag.rs  error.rs  lib.rs  light.rs  octree.rs  raymarch.rs  storage.rs  store.rs  voxel.rs  world_dda.rs
crates/atomr-worlds-voxel/tests/: oracle_stress.rs
examples/print-brick/: Cargo.toml
examples/print-brick/src/: main.rs
examples/showcase-strategies/: Cargo.toml
examples/showcase-strategies/src/: main.rs
examples/sphere-flyby/: Cargo.toml
examples/sphere-flyby/src/: main.rs
examples/view-overview/: Cargo.toml
examples/view-overview/src/: main.rs
examples/view-png/: Cargo.toml
examples/view-png/src/: main.rs
examples/view-rts/: Cargo.toml
examples/view-rts/src/: main.rs
examples/view-slice/: Cargo.toml
examples/view-slice/src/: main.rs
(+85 files in other folders)
