[workspace]
resolver = "2"
members = [
    "crates/atomr-worlds-core",
    "crates/atomr-worlds-voxel",
    "crates/atomr-worlds-proto",
    "crates/atomr-worlds-host",
    "crates/atomr-worlds-noise",
    "crates/atomr-worlds-generate",
    "crates/atomr-worlds-accel",
    "crates/atomr-worlds-physics",
    "crates/atomr-worlds-persist",
    "crates/atomr-worlds-view",
    "crates/atomr-worlds-testkit",
    "crates/atomr-worlds-py",
    "crates/atomr-worlds-remote",
    "crates/atomr-worlds-server",
    "crates/atomr-worlds-client",
    "examples/print-seed-chain",
    "examples/print-brick",
    "examples/view-png",
    "examples/sphere-flyby",
    "examples/view-fp",
    "examples/view-overview",
    "examples/view-rts",
    "examples/view-slice",
    "examples/view-tp",
    "examples/showcase-strategies",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/cognect/atomr-worlds"
homepage = "https://github.com/cognect/atomr-worlds"
authors = ["atomr contributors"]

[workspace.dependencies]
# Async / runtime
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }

# Error / utility
thiserror = "1"

# Logging / tracing
tracing = "0.1"

# Numerics / layout
bytemuck = { version = "1", features = ["derive"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal — atomr-worlds crates
atomr-worlds-core     = { path = "crates/atomr-worlds-core",     version = "0.1.0" }
atomr-worlds-voxel    = { path = "crates/atomr-worlds-voxel",    version = "0.1.0" }
atomr-worlds-proto    = { path = "crates/atomr-worlds-proto",    version = "0.1.0" }
atomr-worlds-host     = { path = "crates/atomr-worlds-host",     version = "0.1.0" }
atomr-worlds-noise    = { path = "crates/atomr-worlds-noise",    version = "0.1.0" }
atomr-worlds-generate = { path = "crates/atomr-worlds-generate", version = "0.1.0" }
atomr-worlds-accel    = { path = "crates/atomr-worlds-accel",    version = "0.1.0" }
atomr-worlds-physics  = { path = "crates/atomr-worlds-physics",  version = "0.1.0" }
atomr-worlds-persist  = { path = "crates/atomr-worlds-persist",  version = "0.1.0" }
atomr-worlds-view     = { path = "crates/atomr-worlds-view",     version = "0.1.0" }
atomr-worlds-testkit  = { path = "crates/atomr-worlds-testkit",  version = "0.1.0" }
atomr-worlds-remote   = { path = "crates/atomr-worlds-remote",   version = "0.1.0" }
atomr-worlds-server   = { path = "crates/atomr-worlds-server",   version = "0.1.0" }

# External — atomr (sibling repo, path deps)
atomr                  = { path = "../atomr/crates/atomr",                  version = "0.10.1" }
atomr-core             = { path = "../atomr/crates/atomr-core",             version = "0.10.1" }
atomr-config           = { path = "../atomr/crates/atomr-config",           version = "0.10.1" }
atomr-cluster          = { path = "../atomr/crates/atomr-cluster",          version = "0.10.1" }
atomr-cluster-sharding = { path = "../atomr/crates/atomr-cluster-sharding", version = "0.10.1" }
atomr-persistence      = { path = "../atomr/crates/atomr-persistence",      version = "0.10.1" }
atomr-persistence-sql  = { path = "../atomr/crates/atomr-persistence-sql",  version = "0.10.1" }
atomr-remote           = { path = "../atomr/crates/atomr-remote",           version = "0.10.1" }

# External — atomr-accel (sibling repo, path deps; phase 5 full)
atomr-accel            = { path = "../atomr-accel/crates/atomr-accel",      version = "0.10.0" }
atomr-accel-cuda       = { path = "../atomr-accel/crates/atomr-accel-cuda", version = "0.10.0" }
cudarc                 = { version = "0.19.4", features = ["cuda-version-from-build-system", "fallback-latest"] }

# PNG output (Phase 2 scaffold)
png = "0.17"

# Python bindings (Phase 6).
# abi3-py311 is the floor — the Phase-11 follow-up needs the
# `Py_bf_getbuffer` slot which entered the limited API at Python 3.11.
# Python 3.10 reaches EOL in October 2026.
pyo3 = { version = "0.22", features = ["abi3-py311"] }
# Phase 11 follow-up: bridges tokio futures into Python awaitables for
# the `WorldClient.subscribe_async` path. Pulls a static tokio runtime
# that PyWorldClient also reuses for sync `block_on` calls so we don't
# fragment async contexts.
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime", "attributes"] }

# Client/server CLI + Bevy (Phase 15)
clap = { version = "4", features = ["derive"] }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "bevy_asset",
    "x11",
    "default_font",
    "tonemapping_luts",
    "ktx2",
    "zstd_rust",
    # Bevy 0.17: Bloom moved from core_pipeline into bevy_post_process.
    "bevy_post_process",
] }
# Rec 2 (Advanced Voxel Architectures): client-side rapier physics. Confined to
# the client crate, behind its `physics` feature — the determinism-tested crates
# (core/voxel/proto/host/physics/generate/persist) never gain a rapier edge.
# `default-features = false` + only `dim3` drops the async-collider / debug-render
# / to-bevy-mesh / picking features we don't use (TGS-Soft is rapier's default).
bevy_rapier3d = { version = "0.34", default-features = false, features = ["dim3"] }
