[package]
name = "atomr-worlds-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Bevy-driven interactive client for atomr-worlds. Talks to LocalHost / RemoteHost / ClusterHost."

[[bin]]
name = "atomr-worlds-client"
path = "src/main.rs"

[dependencies]
atomr-worlds-core     = { workspace = true }
atomr-worlds-voxel    = { workspace = true }
atomr-worlds-proto    = { workspace = true }
atomr-worlds-host     = { workspace = true }
atomr-worlds-view     = { workspace = true }
atomr-worlds-remote   = { workspace = true }
atomr-worlds-generate = { workspace = true }

bevy    = { workspace = true }
tokio   = { workspace = true }
clap    = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
atomr-worlds-server = { workspace = true }
