[package]
name = "atomr-worlds-generate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Procedural generators per hierarchy tier; CPU `BrickGenerator` impl for world terrain."

[dependencies]
atomr-worlds-core  = { workspace = true }
atomr-worlds-voxel = { workspace = true }
atomr-worlds-noise = { workspace = true }
thiserror = { workspace = true }
