[package]
name = "atomr-worlds-noise"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Deterministic seeded noise primitives (value, gradient, Worley, FBM) for atomr-worlds."

[dependencies]
atomr-worlds-core = { workspace = true }
