[package]
name = "atomr-worlds-persist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Persistence binding for atomr-worlds — wraps atomr-persistence's Journal + SnapshotStore with voxel-write events and overlay snapshots."

[features]
default = []
sql = ["dep:atomr-persistence-sql"]

[dependencies]
atomr-worlds-core  = { workspace = true }
atomr-worlds-voxel = { workspace = true }
atomr-persistence  = { workspace = true }
atomr-persistence-sql = { workspace = true, optional = true }
serde       = { workspace = true }
bincode     = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
