[package]
name = "atomr-worlds-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Wire-format envelopes and actor-message types for atomr-worlds."

[dependencies]
atomr-worlds-core  = { workspace = true }
atomr-worlds-voxel = { workspace = true }
serde   = { workspace = true }
bincode = { workspace = true }
bytes   = { workspace = true }
thiserror = { workspace = true }
