[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "atomrworlds"
version = "0.1.0"
description = "Python bindings for atomr-worlds — procedural universe substrate."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "atomr contributors" }]

[tool.maturin]
module-name = "atomrworlds.atomrworlds_native"
python-source = "python"
features = ["pyo3/extension-module", "extension-module"]
