[package]
name = "atomr-worlds-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Network transport for atomr-worlds: RemoteHost (client) and WorldGateway (server) over atomr-remote."

[dependencies]
atomr-worlds-core  = { workspace = true }
atomr-worlds-proto = { workspace = true }
atomr-worlds-host  = { workspace = true }

atomr                  = { workspace = true }
atomr-config           = { workspace = true }
atomr-core             = { workspace = true }
atomr-remote           = { workspace = true }
atomr-cluster-sharding = { workspace = true }

tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
bincode     = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
atomr-worlds-voxel = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
