[package]
name = "atomr-worlds-voxel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Sparse voxel data structures (brickmap + octree hybrid) for atomr-worlds."

[dependencies]
atomr-worlds-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
flate2 = "1"
