[package]
name = "view-overview"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "view-overview"
path = "src/main.rs"

[dependencies]
atomr-worlds-core     = { workspace = true }
atomr-worlds-view     = { workspace = true }
atomr-worlds-generate = { workspace = true }
