[package]
name = "view-png"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "view-png"
path = "src/main.rs"

[dependencies]
atomr-worlds-core  = { workspace = true }
atomr-worlds-voxel = { workspace = true }
atomr-worlds-proto = { workspace = true }
atomr-worlds-host  = { workspace = true }
tokio = { workspace = true }
png   = { workspace = true }
